// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1:1 relationship does not allow multiple nested rows 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "Node": Array [
      "Query",
      "Post",
      "PostImage",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": undefined,
  "_queryType": "Query",
  "_subscriptionType": undefined,
  "_typeMap": Object {
    "Boolean": "Boolean",
    "CreatePostImageInput": "CreatePostImageInput",
    "CreatePostImagePayload": "CreatePostImagePayload",
    "CreatePostInput": "CreatePostInput",
    "CreatePostPayload": "CreatePostPayload",
    "Cursor": "Cursor",
    "DeletePostByIdInput": "DeletePostByIdInput",
    "DeletePostImageByIdInput": "DeletePostImageByIdInput",
    "DeletePostImageByPostIdInput": "DeletePostImageByPostIdInput",
    "DeletePostImageInput": "DeletePostImageInput",
    "DeletePostImagePayload": "DeletePostImagePayload",
    "DeletePostInput": "DeletePostInput",
    "DeletePostPayload": "DeletePostPayload",
    "ID": "ID",
    "Int": "Int",
    "Mutation": "Mutation",
    "Node": "Node",
    "PageInfo": "PageInfo",
    "Post": "Post",
    "PostCondition": "PostCondition",
    "PostImage": "PostImage",
    "PostImageCondition": "PostImageCondition",
    "PostImageInput": "PostImageInput",
    "PostImageNodeIdConnect": "PostImageNodeIdConnect",
    "PostImageNodeIdDelete": "PostImageNodeIdDelete",
    "PostImageOnPostImageForPostImagePostIdFkeyNodeIdUpdate": "PostImageOnPostImageForPostImagePostIdFkeyNodeIdUpdate",
    "PostImageOnPostImageForPostImagePostIdFkeyUsingPostImagePkeyUpdate": "PostImageOnPostImageForPostImagePostIdFkeyUsingPostImagePkeyUpdate",
    "PostImageOnPostImageForPostImagePostIdFkeyUsingPostImagePostIdKeyUpdate": "PostImageOnPostImageForPostImagePostIdFkeyUsingPostImagePostIdKeyUpdate",
    "PostImagePatch": "PostImagePatch",
    "PostImagePostIdFkeyInput": "PostImagePostIdFkeyInput",
    "PostImagePostIdFkeyInverseInput": "PostImagePostIdFkeyInverseInput",
    "PostImagePostIdFkeyPostCreateInput": "PostImagePostIdFkeyPostCreateInput",
    "PostImagePostIdFkeyPostImageCreateInput": "PostImagePostIdFkeyPostImageCreateInput",
    "PostImagePostImagePkeyConnect": "PostImagePostImagePkeyConnect",
    "PostImagePostImagePkeyDelete": "PostImagePostImagePkeyDelete",
    "PostImagePostImagePostIdKeyConnect": "PostImagePostImagePostIdKeyConnect",
    "PostImagePostImagePostIdKeyDelete": "PostImagePostImagePostIdKeyDelete",
    "PostImagesConnection": "PostImagesConnection",
    "PostImagesEdge": "PostImagesEdge",
    "PostImagesOrderBy": "PostImagesOrderBy",
    "PostInput": "PostInput",
    "PostNodeIdConnect": "PostNodeIdConnect",
    "PostNodeIdDelete": "PostNodeIdDelete",
    "PostOnPostImageForPostImagePostIdFkeyNodeIdUpdate": "PostOnPostImageForPostImagePostIdFkeyNodeIdUpdate",
    "PostOnPostImageForPostImagePostIdFkeyUsingPostPkeyUpdate": "PostOnPostImageForPostImagePostIdFkeyUsingPostPkeyUpdate",
    "PostPatch": "PostPatch",
    "PostPostPkeyConnect": "PostPostPkeyConnect",
    "PostPostPkeyDelete": "PostPostPkeyDelete",
    "PostsConnection": "PostsConnection",
    "PostsEdge": "PostsEdge",
    "PostsOrderBy": "PostsOrderBy",
    "Query": "Query",
    "String": "String",
    "UpdatePostByIdInput": "UpdatePostByIdInput",
    "UpdatePostImageByIdInput": "UpdatePostImageByIdInput",
    "UpdatePostImageByPostIdInput": "UpdatePostImageByPostIdInput",
    "UpdatePostImageInput": "UpdatePostImageInput",
    "UpdatePostImagePayload": "UpdatePostImagePayload",
    "UpdatePostInput": "UpdatePostInput",
    "UpdatePostPayload": "UpdatePostPayload",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
    "updatePostImageOnPostImageForPostImagePostIdFkeyPatch": "updatePostImageOnPostImageForPostImagePostIdFkeyPatch",
    "updatePostOnPostImageForPostImagePostIdFkeyPatch": "updatePostOnPostImageForPostImagePostIdFkeyPatch",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;

exports[`1:1 relationship mutation fails when multiple operators are specified 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "Node": Array [
      "Query",
      "Post",
      "PostImage",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": undefined,
  "_queryType": "Query",
  "_subscriptionType": undefined,
  "_typeMap": Object {
    "Boolean": "Boolean",
    "CreatePostImageInput": "CreatePostImageInput",
    "CreatePostImagePayload": "CreatePostImagePayload",
    "CreatePostInput": "CreatePostInput",
    "CreatePostPayload": "CreatePostPayload",
    "Cursor": "Cursor",
    "DeletePostByIdInput": "DeletePostByIdInput",
    "DeletePostImageByIdInput": "DeletePostImageByIdInput",
    "DeletePostImageByPostIdInput": "DeletePostImageByPostIdInput",
    "DeletePostImageInput": "DeletePostImageInput",
    "DeletePostImagePayload": "DeletePostImagePayload",
    "DeletePostInput": "DeletePostInput",
    "DeletePostPayload": "DeletePostPayload",
    "ID": "ID",
    "Int": "Int",
    "Mutation": "Mutation",
    "Node": "Node",
    "PageInfo": "PageInfo",
    "Post": "Post",
    "PostCondition": "PostCondition",
    "PostImage": "PostImage",
    "PostImageCondition": "PostImageCondition",
    "PostImageInput": "PostImageInput",
    "PostImageNodeIdConnect": "PostImageNodeIdConnect",
    "PostImageNodeIdDelete": "PostImageNodeIdDelete",
    "PostImageOnPostImageForPostImagePostIdFkeyNodeIdUpdate": "PostImageOnPostImageForPostImagePostIdFkeyNodeIdUpdate",
    "PostImageOnPostImageForPostImagePostIdFkeyUsingPostImagePkeyUpdate": "PostImageOnPostImageForPostImagePostIdFkeyUsingPostImagePkeyUpdate",
    "PostImageOnPostImageForPostImagePostIdFkeyUsingPostImagePostIdKeyUpdate": "PostImageOnPostImageForPostImagePostIdFkeyUsingPostImagePostIdKeyUpdate",
    "PostImagePatch": "PostImagePatch",
    "PostImagePostIdFkeyInput": "PostImagePostIdFkeyInput",
    "PostImagePostIdFkeyInverseInput": "PostImagePostIdFkeyInverseInput",
    "PostImagePostIdFkeyPostCreateInput": "PostImagePostIdFkeyPostCreateInput",
    "PostImagePostIdFkeyPostImageCreateInput": "PostImagePostIdFkeyPostImageCreateInput",
    "PostImagePostImagePkeyConnect": "PostImagePostImagePkeyConnect",
    "PostImagePostImagePkeyDelete": "PostImagePostImagePkeyDelete",
    "PostImagePostImagePostIdKeyConnect": "PostImagePostImagePostIdKeyConnect",
    "PostImagePostImagePostIdKeyDelete": "PostImagePostImagePostIdKeyDelete",
    "PostImagesConnection": "PostImagesConnection",
    "PostImagesEdge": "PostImagesEdge",
    "PostImagesOrderBy": "PostImagesOrderBy",
    "PostInput": "PostInput",
    "PostNodeIdConnect": "PostNodeIdConnect",
    "PostNodeIdDelete": "PostNodeIdDelete",
    "PostOnPostImageForPostImagePostIdFkeyNodeIdUpdate": "PostOnPostImageForPostImagePostIdFkeyNodeIdUpdate",
    "PostOnPostImageForPostImagePostIdFkeyUsingPostPkeyUpdate": "PostOnPostImageForPostImagePostIdFkeyUsingPostPkeyUpdate",
    "PostPatch": "PostPatch",
    "PostPostPkeyConnect": "PostPostPkeyConnect",
    "PostPostPkeyDelete": "PostPostPkeyDelete",
    "PostsConnection": "PostsConnection",
    "PostsEdge": "PostsEdge",
    "PostsOrderBy": "PostsOrderBy",
    "Query": "Query",
    "String": "String",
    "UpdatePostByIdInput": "UpdatePostByIdInput",
    "UpdatePostImageByIdInput": "UpdatePostImageByIdInput",
    "UpdatePostImageByPostIdInput": "UpdatePostImageByPostIdInput",
    "UpdatePostImageInput": "UpdatePostImageInput",
    "UpdatePostImagePayload": "UpdatePostImagePayload",
    "UpdatePostInput": "UpdatePostInput",
    "UpdatePostPayload": "UpdatePostPayload",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
    "updatePostImageOnPostImageForPostImagePostIdFkeyPatch": "updatePostImageOnPostImageForPostImagePostIdFkeyPatch",
    "updatePostOnPostImageForPostImagePostIdFkeyPatch": "updatePostOnPostImageForPostImagePostIdFkeyPatch",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;

exports[`plural when one-to-many, singular in reverse 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "Node": Array [
      "Query",
      "Child",
      "Parent",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": undefined,
  "_queryType": "Query",
  "_subscriptionType": undefined,
  "_typeMap": Object {
    "Boolean": "Boolean",
    "Child": "Child",
    "ChildChildPkeyConnect": "ChildChildPkeyConnect",
    "ChildChildPkeyDelete": "ChildChildPkeyDelete",
    "ChildCondition": "ChildCondition",
    "ChildInput": "ChildInput",
    "ChildNodeIdConnect": "ChildNodeIdConnect",
    "ChildNodeIdDelete": "ChildNodeIdDelete",
    "ChildOnChildForChildParentFkeyNodeIdUpdate": "ChildOnChildForChildParentFkeyNodeIdUpdate",
    "ChildOnChildForChildParentFkeyUsingChildPkeyUpdate": "ChildOnChildForChildParentFkeyUsingChildPkeyUpdate",
    "ChildParentFkeyChildCreateInput": "ChildParentFkeyChildCreateInput",
    "ChildParentFkeyInput": "ChildParentFkeyInput",
    "ChildParentFkeyInverseInput": "ChildParentFkeyInverseInput",
    "ChildParentFkeyParentCreateInput": "ChildParentFkeyParentCreateInput",
    "ChildPatch": "ChildPatch",
    "ChildrenConnection": "ChildrenConnection",
    "ChildrenEdge": "ChildrenEdge",
    "ChildrenOrderBy": "ChildrenOrderBy",
    "CreateChildInput": "CreateChildInput",
    "CreateChildPayload": "CreateChildPayload",
    "CreateParentInput": "CreateParentInput",
    "CreateParentPayload": "CreateParentPayload",
    "Cursor": "Cursor",
    "DeleteChildByIdInput": "DeleteChildByIdInput",
    "DeleteChildInput": "DeleteChildInput",
    "DeleteChildPayload": "DeleteChildPayload",
    "DeleteParentByIdInput": "DeleteParentByIdInput",
    "DeleteParentInput": "DeleteParentInput",
    "DeleteParentPayload": "DeleteParentPayload",
    "ID": "ID",
    "Int": "Int",
    "Mutation": "Mutation",
    "Node": "Node",
    "PageInfo": "PageInfo",
    "Parent": "Parent",
    "ParentCondition": "ParentCondition",
    "ParentInput": "ParentInput",
    "ParentNodeIdConnect": "ParentNodeIdConnect",
    "ParentNodeIdDelete": "ParentNodeIdDelete",
    "ParentOnChildForChildParentFkeyNodeIdUpdate": "ParentOnChildForChildParentFkeyNodeIdUpdate",
    "ParentOnChildForChildParentFkeyUsingParentPkeyUpdate": "ParentOnChildForChildParentFkeyUsingParentPkeyUpdate",
    "ParentParentPkeyConnect": "ParentParentPkeyConnect",
    "ParentParentPkeyDelete": "ParentParentPkeyDelete",
    "ParentPatch": "ParentPatch",
    "ParentsConnection": "ParentsConnection",
    "ParentsEdge": "ParentsEdge",
    "ParentsOrderBy": "ParentsOrderBy",
    "Query": "Query",
    "String": "String",
    "UpdateChildByIdInput": "UpdateChildByIdInput",
    "UpdateChildInput": "UpdateChildInput",
    "UpdateChildPayload": "UpdateChildPayload",
    "UpdateParentByIdInput": "UpdateParentByIdInput",
    "UpdateParentInput": "UpdateParentInput",
    "UpdateParentPayload": "UpdateParentPayload",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
    "updateChildOnChildForChildParentFkeyPatch": "updateChildOnChildForChildParentFkeyPatch",
    "updateParentOnChildForChildParentFkeyPatch": "updateParentOnChildForChildParentFkeyPatch",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;

exports[`singular when one-to-one 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "Node": Array [
      "Query",
      "Child",
      "Parent",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": undefined,
  "_queryType": "Query",
  "_subscriptionType": undefined,
  "_typeMap": Object {
    "Boolean": "Boolean",
    "Child": "Child",
    "ChildChildPkeyConnect": "ChildChildPkeyConnect",
    "ChildChildPkeyDelete": "ChildChildPkeyDelete",
    "ChildCondition": "ChildCondition",
    "ChildInput": "ChildInput",
    "ChildNodeIdConnect": "ChildNodeIdConnect",
    "ChildNodeIdDelete": "ChildNodeIdDelete",
    "ChildOnChildForChildParentFkeyNodeIdUpdate": "ChildOnChildForChildParentFkeyNodeIdUpdate",
    "ChildOnChildForChildParentFkeyUsingChildPkeyUpdate": "ChildOnChildForChildParentFkeyUsingChildPkeyUpdate",
    "ChildParentFkeyChildCreateInput": "ChildParentFkeyChildCreateInput",
    "ChildParentFkeyInput": "ChildParentFkeyInput",
    "ChildParentFkeyInverseInput": "ChildParentFkeyInverseInput",
    "ChildParentFkeyParentCreateInput": "ChildParentFkeyParentCreateInput",
    "ChildPatch": "ChildPatch",
    "ChildrenConnection": "ChildrenConnection",
    "ChildrenEdge": "ChildrenEdge",
    "ChildrenOrderBy": "ChildrenOrderBy",
    "CreateChildInput": "CreateChildInput",
    "CreateChildPayload": "CreateChildPayload",
    "CreateParentInput": "CreateParentInput",
    "CreateParentPayload": "CreateParentPayload",
    "Cursor": "Cursor",
    "DeleteChildByParentIdInput": "DeleteChildByParentIdInput",
    "DeleteChildInput": "DeleteChildInput",
    "DeleteChildPayload": "DeleteChildPayload",
    "DeleteParentByIdInput": "DeleteParentByIdInput",
    "DeleteParentInput": "DeleteParentInput",
    "DeleteParentPayload": "DeleteParentPayload",
    "ID": "ID",
    "Int": "Int",
    "Mutation": "Mutation",
    "Node": "Node",
    "PageInfo": "PageInfo",
    "Parent": "Parent",
    "ParentCondition": "ParentCondition",
    "ParentInput": "ParentInput",
    "ParentNodeIdConnect": "ParentNodeIdConnect",
    "ParentNodeIdDelete": "ParentNodeIdDelete",
    "ParentOnChildForChildParentFkeyNodeIdUpdate": "ParentOnChildForChildParentFkeyNodeIdUpdate",
    "ParentOnChildForChildParentFkeyUsingParentPkeyUpdate": "ParentOnChildForChildParentFkeyUsingParentPkeyUpdate",
    "ParentParentPkeyConnect": "ParentParentPkeyConnect",
    "ParentParentPkeyDelete": "ParentParentPkeyDelete",
    "ParentPatch": "ParentPatch",
    "ParentsConnection": "ParentsConnection",
    "ParentsEdge": "ParentsEdge",
    "ParentsOrderBy": "ParentsOrderBy",
    "Query": "Query",
    "String": "String",
    "UpdateChildByParentIdInput": "UpdateChildByParentIdInput",
    "UpdateChildInput": "UpdateChildInput",
    "UpdateChildPayload": "UpdateChildPayload",
    "UpdateParentByIdInput": "UpdateParentByIdInput",
    "UpdateParentInput": "UpdateParentInput",
    "UpdateParentPayload": "UpdateParentPayload",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
    "updateChildOnChildForChildParentFkeyPatch": "updateChildOnChildForChildParentFkeyPatch",
    "updateParentOnChildForChildParentFkeyPatch": "updateParentOnChildForChildParentFkeyPatch",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;
